# vikings_bot_agent_abstraction_layer

./: CMakeLists.txt  README.md  package.xml
agent_layer/: classes.py
agent_layer/agents/: courier copy.py  courier.py  loader.py  unloader.py
launch/: agent_abstraction_layer.launch.py  single_courier.launch.py  single_loader.launch.py  single_unloader.launch.py
msg/: Bid.msg  LoaderStatus.msg  Task.msg  UGVStatus.msg  UnloaderStatus.msg
srv/: LoadUnloadRequest.srv
